tests/snapshots/run_wpt_conformance__coreml_global_averagePool2d_float32_4D_tensor_all_positive_options_windowDimensions.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js global averagePool2d float32 4D tensor all positive options.windowDimensions, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type avg_pool: Required param 'pad' is missing

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 2, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="", outputSizes=null, padding=[], strides=[], windowDimensions=[5, 5]);
  }

  outputs { averagePool2dOutput; }
}
